--- a/vagrant/vm/Dockerfile
+++ b/vagrant/vm/Dockerfile
@@ -1,20 +1,33 @@
 FROM centos
 
-RUN yum install -y passwd sudo openssh-server openssh-clients telnet tcpdump bind-utils nc
+RUN yum install -y passwd sudo openssh-server openssh-clients telnet tcpdump bind-utils nc dnsmasq
 
-RUN sed -ri \
-  -e 's/UsePAM yes/#UsePAM yes/g' \
-  -e 's/#UsePAM no/UsePAM no/g' \
-  -e 's/#UseDNS yes/UseDNS no/g' \
-  /etc/ssh/sshd_config
+# ssh
+#RUN echo UsePAM no >> /etc/ssh/sshd_config
+RUN echo "UseDNS no" >> /etc/ssh/sshd_config
+RUN echo "GSSAPIAuthentication no" >> /etc/ssh/sshd_config
 RUN /etc/init.d/sshd start
 RUN /etc/init.d/sshd stop
+# http://stackoverflow.com/questions/22547939/docker-gitlab-container-ssh-git-login-error
+RUN sed -i "s/session *required *pam_loginuid.so/session    optional     pam_loginuid.so/" /etc/pam.d/sshd
 
+# vagrant user
 RUN useradd vagrant
 RUN echo vagrant:vagrant | chpasswd
 ADD ./ssh /home/vagrant/.ssh/
 RUN mkdir -p /home/vagrant/.ssh; chown -R vagrant:vagrant /home/vagrant/.ssh; chmod 700 /home/vagrant/.ssh;
-RUN echo "vagrant	ALL=(ALL)	ALL" >> /etc/sudoers.d/vagrant
+
+# sudo
+RUN sed "s/Defaults *requiretty/#Defaults    requiretty/" -i /etc/sudoers
+RUN echo "%vagrant	ALL=(ALL)	NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
+
+# dnsmasq
+RUN echo "NETWORKING=yes" > /etc/sysconfig/network
+RUN echo "listen-address=127.0.0.1" >> /etc/dnsmasq.conf
+RUN echo "resolv-file=/etc/resolv.dnsmasq.conf" >> /etc/dnsmasq.conf
+RUN echo "user=root" >> /etc/dnsmasq.conf
+RUN echo "nameserver 8.8.8.8" >> /etc/resolv.dnsmasq.conf
+RUN echo "nameserver 8.8.4.4" >> /etc/resolv.dnsmasq.conf
 
 # EXPOSE is not necessary
 #EXPOSE 22
