--- a/vnet/Gemfile
+++ b/vnet/Gemfile
@@ -21,7 +21,7 @@ gem "sinatra"
 gem "sinatra-contrib"
 gem "sinatra-hashfix"
 gem "unicorn"
-gem "active_support"
+gem "activesupport"
 
 # trema and build requirement gems
 gem 'paper_house', '~>0.5.0'
