--- a/config/dev.yml
+++ b/config/dev.yml
@@ -15,6 +15,8 @@ update_vnet_via: "git",
 log_level: debug
 
 dataset_options:
+  physical_port: eth0
+  edge_port: eth2
   edge_ipv4_address: 172.16.20.10
   edge_esxi_ipv4_address: 172.16.20.9
   dp1_ipv4_address: 172.16.20.11
