Add support for ssh quiet mode

--- a/config/dev.yml
+++ b/config/dev.yml
@@ -12,6 +12,8 @@ vnet_branch: master
 vnet_path: /opt/axsh/wakame-vnet
 update_vnet_via: "git",
 
+ssh_quiet_mode: true
+
 log_level: debug
 
 dataset_options:
