--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -11,7 +11,6 @@ VAGRANT_BOX = "hansode/centos-6.5-x86_64"
 vms = [
   {
     name: "vnmgr",
-    memory: 1024,
     networks: [
       { type: "hostonly", ip: "192.168.20.10" },
     ],
@@ -19,7 +18,6 @@ vms = [
   },
   {
     name: "vna1",
-    memory: 1024,
     networks: [
       { type: "hostonly", ip: "192.168.20.11" },
       { type: "intnet", name: "public_network1" },
@@ -28,7 +26,6 @@ vms = [
   },
   {
     name: "vna2",
-    memory: 1024,
     networks: [
       { type: "hostonly", ip: "192.168.20.12" },
       { type: "intnet", name: "public_network1" },
@@ -37,7 +34,6 @@ vms = [
   },
   {
     name: "vna3",
-    memory: 1024,
     networks: [
       { type: "hostonly", ip: "192.168.20.13" },
       { type: "intnet", name: "public_network2" },
@@ -46,7 +42,6 @@ vms = [
   },
   {
     name: "edge",
-    memory: 1024,
     networks: [
       { type: "hostonly", ip: "192.168.20.21" },
       { type: "intnet", name: "public_network1" },
@@ -77,7 +72,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
     # only suuport virtualbox atm.
     config.vm.provider :virtualbox do |vb|
-      vb.memory = vm[:memory] || 1024
+      vb.memory = vm[:memory] if vm[:memory]
 
       # https://github.com/mitchellh/vagrant/issues/1172
       vb.customize ["modifyvm", :id, "--natdnsproxy1", "off"]
