--- a/vagrant/share/Dockerfile
+++ b/vagrant/share/Dockerfile
@@ -14,7 +14,8 @@ RUN sed -i "s/session *required *pam_loginuid.so/session    optional     pam_log
 # vagrant user
 RUN useradd vagrant
 RUN echo vagrant:vagrant | chpasswd
-ADD ./ssh /home/vagrant/.ssh/
+ADD ./ssh/vm_config /home/vagrant/.ssh/config
+ADD ./ssh/authorized_keys /home/vagrant/.ssh/authorized_keys
 RUN mkdir -p /home/vagrant/.ssh; chown -R vagrant:vagrant /home/vagrant/.ssh; chmod 700 /home/vagrant/.ssh;
 
 # sudo
