Use kvm instead of esxi for edge test.

--- a/config/dev.yml
+++ b/config/dev.yml
@@ -1,8 +1,8 @@
-specs_ext: [edge_esxi]
+specs_ext: [edge]
 nodes:
   webapi: [192.168.2.61]
   vnmgr: [192.168.2.61]
-  vna: [192.168.2.61, 192.168.2.62, 192.168.2.63, 192.168.2.60, 192.168.2.65]
+  vna: [192.168.2.61, 192.168.2.62, 192.168.2.63, 192.168.2.60]
 
 webapi:
   host: 192.168.2.61
