--- a/config/itest.yml
+++ b/config/itest.yml
@@ -1,8 +1,8 @@
-specs_ext: [edge_esxi]
+specs_ext: [edge]
 nodes:
   webapi: [192.168.2.91]
   vnmgr: [192.168.2.91]
-  vna: [192.168.2.91, 192.168.2.92, 192.168.2.93, 192.168.2.90, 192.168.2.95]
+  vna: [192.168.2.91, 192.168.2.92, 192.168.2.93, 192.168.2.90]
 
 webapi:
   host: 192.168.2.91
