--- a/config/dev.yml
+++ b/config/dev.yml
@@ -9,12 +9,10 @@ webapi:
   port: 9090
 
 vnet_branch: master
-vnet_path: /opt/axsh/wakame-vnet
-update_vnet_via: "git"
+
+update_vnet_via: rpm
 
 ssh_quiet_mode: true
-
-log_level: debug
 
 dataset_options:
   physical_port: eth0
