Put the comments in the conf files.

--- a/deployment/conf_files/etc/openvnet/vna.conf
+++ b/deployment/conf_files/etc/openvnet/vna.conf
@@ -3,6 +3,7 @@ node {
   addr {
     protocol "tcp"
     host "127.0.0.1"
+    # specify public/global IP address if it runs in a NAT environment.
     public ""
     port 9103
   }
