Added the comments for each parameter.

--- a/deployment/conf_files/etc/openvnet/common.conf
+++ b/deployment/conf_files/etc/openvnet/common.conf
@@ -1,8 +1,30 @@
+#
+# adapter : The name of key-value store. Defalut value is 'redis'.
+#
+#    host : IP address of the key-value store.
+#
+#    port : Listen port of the process.
+#
+
 registry {
   adapter "redis"
   host "127.0.0.1"
   port 6379
 }
+
+#
+#  adapter : The adapter name for the database.
+#
+#     host : IP address of the db server.
+#
+# database : The name of the database.
+#
+#     port : Listen port of the db server.
+#
+#     user : User name of the db server.
+#
+# password : Password of the db server.
+#
 
 db {
   adapter "mysql2"
