--- a/deployment/conf_files/etc/openvnet/vna.conf
+++ b/deployment/conf_files/etc/openvnet/vna.conf
@@ -1,13 +1,33 @@
+#
+#       id : The ID of the OpenVNet's process. It should be unique among the entire world of the OpenVNet.
+#
+# protocol : This parameter can be used to specify the 0MQ address. Default value is 'tcp'.
+#
+#     host : Private IP address that can be used to specify the 0MQ address. 
+#
+#   public : Public/Global IP address that is linked to the private IP address specified by the 'host' parameter.
+#            A 0MQ socket will be created with the public/global IP address if this paramter is specified.
+#            Otherwise 'host' parameter will be used to create a 0MQ socket.
+#
+#     port : Listen port of the process.
+#
+#
+
 node {
   id "vna"
   addr {
     protocol "tcp"
     host "127.0.0.1"
-    # specify public/global IP address if it runs in a NAT environment.
     public ""
     port 9103
   }
 }
+
+#
+#    uuid : The uuid of the public/physical network in which the vna participates.
+#
+# address : The gateway address of the network specified by the 'uuid'.
+#
 
 network {
   uuid ""
