run webapi and vnmgr with their own user

--- a/deployment/conf_files/etc/init/vnet-vnmgr.conf
+++ b/deployment/conf_files/etc/init/vnet-vnmgr.conf
@@ -21,6 +21,6 @@ script
     }
     cd ${VNET_ROOT}/vnet/
 
-    exec bundle exec ./bin/${NAME} \
-        >> ${LOG_DIRECTORY}/${NAME}.log 2>&1
+    su -m ${VNET_USER} -c "exec bundle exec ./bin/${NAME} \
+        >> ${LOG_DIRECTORY}/${NAME}.log 2>&1"
 end script
