--- a/deployment/conf_files/etc/init/vnet-webapi.conf
+++ b/deployment/conf_files/etc/init/vnet-webapi.conf
@@ -21,9 +21,9 @@ script
     }
     cd ${VNET_ROOT}/vnet/
 
-    exec bundle exec unicorn \
+    su -m ${VNET_USER} -c "exec bundle exec unicorn \
      -o ${BIND_ADDR:-0.0.0.0} \
      -p ${PORT:-9090} \
      ./rack/config-${NAME}.ru \
-        >> ${LOG_DIRECTORY}/${NAME}.log 2>&1
+        >> ${LOG_DIRECTORY}/${NAME}.log 2>&1"
 end script
