--- a/deployment/conf_files/etc/init/vnet-vnmgr.conf
+++ b/deployment/conf_files/etc/init/vnet-vnmgr.conf
@@ -8,6 +8,10 @@ respawn limit 5 60
 env NAME=vnmgr
 
 script
+    ## log
+    #exec 2>>/var/log/openvnet/vnmgr-upstart.log
+    #set -x
+
     [ -f /etc/default/vnet-${NAME} ] && . /etc/default/vnet-${NAME}
     export LOG_DIRECTORY
 
@@ -21,6 +25,5 @@ script
     }
     cd ${VNET_ROOT}/vnet/
 
-    su -m ${VNET_USER} -c "exec bundle exec ./bin/${NAME} \
-        >> ${LOG_DIRECTORY}/${NAME}.log 2>&1"
+    su ${VNET_USER} -s /bin/sh -c "exec bundle exec ./bin/${NAME}" >> ${LOG_DIRECTORY}/${NAME}.log 2>&1
 end script
