--- a/deployment/conf_files/etc/init/vnet-webapi.conf
+++ b/deployment/conf_files/etc/init/vnet-webapi.conf
@@ -8,6 +8,10 @@ respawn limit 5 60
 env NAME=webapi
 
 script
+    ## log
+    # exec 2>>/var/log/openvnet/webapi-upstart.log
+    # set -x
+
     [ -f /etc/default/vnet-${NAME} ] && . /etc/default/vnet-${NAME}
     export LOG_DIRECTORY
 
@@ -21,9 +25,9 @@ script
     }
     cd ${VNET_ROOT}/vnet/
 
-    su -m ${VNET_USER} -c "exec bundle exec unicorn \
+    su ${VNET_USER} -s /bin/sh -c "exec bundle exec unicorn \
      -o ${BIND_ADDR:-0.0.0.0} \
      -p ${PORT:-9090} \
-     ./rack/config-${NAME}.ru \
-        >> ${LOG_DIRECTORY}/${NAME}.log 2>&1"
+     ./rack/config-${NAME}.ru" \
+        >> ${LOG_DIRECTORY}/${NAME}.log 2>&1
 end script
