start changes for vna running with own user

--- a/deployment/conf_files/etc/init/vnet-vna.conf
+++ b/deployment/conf_files/etc/init/vnet-vna.conf
@@ -8,6 +8,9 @@ respawn limit 5 60
 env NAME=vna
 
 script
+    ## log
+    # exec 2>>/var/log/openvnet/vna-upstart.log
+    # set -x
     [ -f /etc/default/vnet-${NAME} ] && . /etc/default/vnet-${NAME}
     export LOG_DIRECTORY
 
@@ -21,6 +24,6 @@ script
     }
     cd ${VNET_ROOT}/vnet/
 
-    exec bundle exec ./bin/${NAME} \
+    su ${VNET_USER} -s /bin/sh -c "exec bundle exec ./bin/${NAME}" \
         >> ${LOG_DIRECTORY}/${NAME}.log 2>&1
 end script
