Improved comment for commented logging code

--- a/deployment/conf_files/etc/init/vnet-webapi.conf
+++ b/deployment/conf_files/etc/init/vnet-webapi.conf
@@ -8,7 +8,7 @@ respawn limit 5 60
 env NAME=webapi
 
 script
-    ## log
+    ## Uncomment next 2 lines to enable logging of this upstart script
     # exec 2>>/var/log/openvnet/webapi-upstart.log
     # set -x
 
