--- a/deployment/conf_files/etc/init/vnet-vna.conf
+++ b/deployment/conf_files/etc/init/vnet-vna.conf
@@ -8,7 +8,7 @@ respawn limit 5 60
 env NAME=vna
 
 script
-    ## log
+    ## Uncomment next 2 lines to enable logging of this upstart script
     # exec 2>>/var/log/openvnet/vna-upstart.log
     # set -x
     [ -f /etc/default/vnet-${NAME} ] && . /etc/default/vnet-${NAME}
