--- a/vnet/Gemfile
+++ b/vnet/Gemfile
@@ -31,7 +31,7 @@ gem 'trema', :git=>'https://github.com/axsh/trema.git', :branch=>'wakame-edge'
 
 group :development, :test do
   gem "rake"
-  gem "rspec", '3.0.0beta2' # Updating to 3.0.0 or higher broke the unit tests.
+  gem "rspec"
   gem "rack-test"
   gem "fabrication", '2.9.8' # Updating to 2.13.2 broke the unit tests.
   gem 'database_cleaner'
