--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -9,7 +9,7 @@ use_directory_urls: true
 repo_url: https://github.com/axsh/openvnet
 
 copyright: Copyright &copy; 2015, <a href="http://axsh.jp/">Axsh Co. Ltd.</a>.
-google_analytics: ['UA-63388719-2', 'axsh.github.io/openvnet']
+google_analytics: ['UA-63388719-2', 'auto']
 
 pages:
 - ['index.md', 'Home']
