--- a/vnet/Gemfile
+++ b/vnet/Gemfile
@@ -37,6 +37,7 @@ group :development, :test do
   gem 'database_cleaner'
 
   gem "coveralls"
+  gem "vnet_api_client", path: File.dirname(File.expand_path('../../client/ruby/', __FILE__))
 
   gem "pry-byebug"
 end
