Set the integration test to use vnctl

--- a/integration_test/config/base.yml
+++ b/integration_test/config/base.yml
@@ -8,7 +8,7 @@ vm_http_proxy: http://10.50.0.2:3128
 dump_flows: true
 aggregate_logs: true
 
-api_adapter: :faraday
+api_adapter: :vnctl
 
 vms:
   vm1:
