Fixed some faulty network/ip combinations in the integration test

--- a/integration_test/config/default.yml
+++ b/integration_test/config/default.yml
@@ -30,8 +30,10 @@ dataset_options:
   dp2_ipv4_address: 172.16.20.12
   dp3_ipv4_address: 172.16.30.11
   edge_ipv4_address: 172.16.20.21
-  public_ipv4_network: 172.16.20.0
-  public_ipv4_prefix: 24
+  public_ipv4_public1_network: 172.16.90.0
+  public_ipv4_public1_prefix: 24
+  public_ipv4_public2_network: 172.16.91.0
+  public_ipv4_public2_prefix: 24
   public_ipv4_address1: 172.16.20.201
   public_ipv4_address2: 172.16.20.202
   public_router_ipv4_address: 172.16.20.102
