--- a/integration_test/config/itest.yml
+++ b/integration_test/config/itest.yml
@@ -22,8 +22,10 @@ dataset_options:
   dp1_ipv4_address: 172.16.90.10
   dp2_ipv4_address: 172.16.90.11
   dp3_ipv4_address: 172.16.91.10
-  public_ipv4_network: 172.16.90.0
-  public_ipv4_prefix: 24
+  public_ipv4_public1_network: 172.16.90.0
+  public_ipv4_public1_prefix: 24
+  public_ipv4_public2_network: 172.16.91.0
+  public_ipv4_public2_prefix: 24
   public_ipv4_address1: 172.16.90.20
   public_ipv4_address2: 172.16.90.21
   public_dhcp_ipv4_address: 172.16.90.3
