--- a/integration_test/dataset/base.yml
+++ b/integration_test/dataset/base.yml
@@ -19,15 +19,15 @@ networks:
 
   - uuid: nw-public1
     display_name: public1
-    ipv4_network: <%= public_ipv4_network %>
-    ipv4_prefix: <%= public_ipv4_prefix %>
+    ipv4_network: <%= public_ipv4_public1_network %>
+    ipv4_prefix: <%= public_ipv4_public1_prefix %>
     domain_name: public
     network_mode: physical
 
   - uuid: nw-public2
     display_name: public2
-    ipv4_network: <%= public_ipv4_network %>
-    ipv4_prefix: <%= public_ipv4_prefix %>
+    ipv4_network: <%= public_ipv4_public2_network %>
+    ipv4_prefix: <%= public_ipv4_public2_prefix %>
     domain_name: public
     network_mode: physical
 
