--- a/deployment/conf.el7/systemd/vnet-webapi.service
+++ b/deployment/conf.el7/systemd/vnet-webapi.service
@@ -7,7 +7,8 @@ User=vnet-webapi
 Type=simple
 WorkingDirectory=/opt/axsh/openvnet/vnet
 Environment="PATH=/opt/axsh/openvnet/ruby/bin:/usr/sbin:/usr/bin"
-ExecStart=/opt/axsh/openvnet/vnet/bin/vnwebapi
+EnvironmentFile=/etc/sysconfig/vnet-webapi
+ExecStart=/opt/axsh/openvnet/vnet/bin/vnwebapi -p ${PORT} -o ${BIND_ADDR}
 Restart=on-failure
 PrivateTmp=true
 
