added new flag to enable/disable legacy filtering

--- a/integration_test/dataset/secg_reference.yml
+++ b/integration_test/dataset/secg_reference.yml
@@ -14,6 +14,7 @@ interfaces:
     network_uuid: nw-vnet1
     mac_address: "02:00:00:00:00:01"
     ingress_filtering_enabled: true
+    enable_legacy_filtering: true
     ipv4_address: 10.101.0.10
 
   - uuid: if-v2
@@ -21,6 +22,7 @@ interfaces:
     network_uuid: nw-vnet1
     mac_address: "02:00:00:00:00:02"
     ingress_filtering_enabled: true
+    enable_legacy_filtering: true
     ipv4_address: 10.101.0.11
 
   - uuid: if-v3
@@ -28,6 +30,7 @@ interfaces:
     network_uuid: nw-vnet1
     mac_address: "02:00:00:00:00:03"
     ingress_filtering_enabled: true
+    enable_legacy_filtering: true
     ipv4_address: 10.101.0.12
 
   - uuid: if-v4
@@ -35,6 +38,7 @@ interfaces:
     network_uuid: nw-vnet1
     mac_address: "02:00:00:00:00:04"
     ingress_filtering_enabled: true
+    enable_legacy_filtering: true
     ipv4_address: 10.101.0.13
 
   - uuid: if-v5
@@ -42,6 +46,7 @@ interfaces:
     network_uuid: nw-vnet1
     mac_address: "02:00:00:00:00:05"
     ingress_filtering_enabled: true
+    enable_legacy_filtering: true
     ipv4_address: 10.101.0.14
 
   - uuid: if-v6
@@ -49,6 +54,7 @@ interfaces:
     network_uuid: nw-vnet1
     mac_address: "02:00:00:00:00:06"
     ipv4_address: 10.101.0.15
+    enable_legacy_filtering: true
 
   - uuid: if-dhcp1
     network_uuid: nw-vnet1
