Installation guide and added the default mac range group option to common.conf.

--- a/deployment/conf_files/etc/openvnet/common.conf
+++ b/deployment/conf_files/etc/openvnet/common.conf
@@ -1,5 +1,5 @@
 #
-# adapter : The name of key-value store. Defalut value is 'redis'.
+# adapter : The name of key-value store. Default value is 'redis'.
 #
 #    host : IP address of the key-value store.
 #
@@ -34,3 +34,9 @@ db {
   user "root"
   password ""
 }
+
+#
+# datapath_mac_group : Mac range group used for datapath_network and datapath_route_link mac addresses.
+#
+
+datapath_mac_group "mrg-dpg"
